<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar_main"
        android:layout_width="match_parent"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <RelativeLayout
                android:id="@+id/top_shopping_card_total"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingRight="2dp"
                android:layout_height="match_parent">
                <ir.meandme.persianviews.MyTextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="@string/app_name_fa"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/add_new_customer"
                    android:layout_width="32dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/add_new_custome"
                    android:layout_height="32dp" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/no_customer_exist"
        android:layout_below="@id/action_bar_main"
        android:background="@drawable/time_background"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="-60dp"
            android:id="@+id/no_customer_img"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <ir.meandme.persianviews.MyTextViewLight
            android:textColor="#fff"
            android:id="@+id/no_customer_exist_text"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/no_customer_exist"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ir.meandme.persianviews.MyTextView
            android:id="@+id/add_new_customer_no_customer_mode"
            android:layout_marginTop="30dp"
            android:text="@string/add_new_customer"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/new_customer_btn_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/customer_recycler_view"
        android:layout_width="match_parent"
        android:layout_below="@id/action_bar_main"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/progress_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#4D000000"
        android:layout_height="40dp">

        <ir.meandme.persianviews.MyTextView
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textSize="16dp"
            android:text="@string/please_wait"
            android:layout_height="match_parent" />
        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

</RelativeLayout>